--- a/component/IntroComponent/styles.module.css
+++ b/component/IntroComponent/styles.module.css
@@ -1,3 +1,10 @@
 .container {
   margin-top: 10vh;
 }
+@media only screen and (max-width: 1000px) {
+  .container h1 {
+    line-height: 3rem !important;
+    font-size: 3rem !important;
+    margin-bottom: 50px !important;
+  }
+}
