--- a/component/Footer/styles.module.css
+++ b/component/Footer/styles.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   margin-left: auto;
-  width: 200px;
+  width: 100px;
   justify-content: space-between;
   align-items: center;
 }
@@ -11,7 +11,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-top: 1px solid #000;
   height: 100px;
 }
 .container h1 {
@@ -21,4 +20,10 @@
   font-size: 0.9rem;
   font-weight: 300;
   letter-spacing: 1.5px;
+}
+
+.navLinks2:hover {
+  color: #fa4529;
+  margin-top: -5px;
+  transition-duration: 0.2s;
 }
