--- a/component/Header/styles.module.css
+++ b/component/Header/styles.module.css
@@ -3,9 +3,17 @@
   font-family: "Spline Sans", sans-serif;
   text-transform: uppercase;
   font-size: 0.9rem;
-  width: 100vw;
+  width: 90%;
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
   justify-content: space-between;
+  background-color: #fff;
+  /* border-bottom: 1px solid #000; */
+  /* position: fixed; */
+  left: 5%;
+  z-index: 100;
+  top: 0;
 }
 
 .leftContainer {
@@ -21,7 +29,7 @@
   display: flex;
   flex-direction: row;
   margin-left: auto;
-  width: 200px;
+  width: 100px;
   justify-content: space-between;
   align-items: center;
 }
@@ -63,4 +71,14 @@
   color: #fa4529;
   margin-top: -5px;
   transition-duration: 0.2s;
+}
+
+@media only screen and (max-width: 1000px) {
+  .container {
+    width: 100%;
+    left: 0%;
+    position: fixed;
+    border-bottom: 2px solid #999999;
+    padding: 20px;
+  }
 }
