--- a/component/SkillSet/styles.module.css
+++ b/component/SkillSet/styles.module.css
@@ -17,20 +17,23 @@
 
 .skills {
   margin: 25px;
-  width: 225px;
+  width: 200px;
   height: auto;
-  padding: 50px;
+  /* padding: 50px;
+  padding-top: 80px;
+  padding-bottom: 80px;
   border-radius: 120px;
-  background-color: #f2f2f2;
+  background-color: #f2f2f2; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.skills h1 {
-  font-size: 2.5rem;
+.skillFlex h2 {
+  font-family: "Spline Sans", sans-serif !important;
   margin-bottom: 0px;
+  font-weight: 500 !important;
 }
 .skills span {
   -webkit-filter: grayscale(100%) !important; /* Safari 6.0 - 9.0 */
@@ -72,5 +75,17 @@
     -webkit-transform: translateY(-15px);
     -ms-transform: translateY(-15px);
     transform: translateY(-15px);
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .skillFlex {
+    flex-direction: column !important;
+  }
+  .skills {
+    margin-top: 70px;
+  }
+  .container h1 {
+    font-size: 3rem !important;
   }
 }
