--- a/component/AboutMe/styles.module.css
+++ b/component/AboutMe/styles.module.css
@@ -29,7 +29,7 @@
 }
 
 .imgContainer {
-  width: 50%;
+  width: 40%;
   padding: 75px;
   height: fit-content;
   border: 1px solid #999999;
@@ -51,10 +51,12 @@
   .leftContainer {
     width: 100%;
     padding: 20px;
+    order: 2;
   }
   .rightContainer {
     width: 100%;
     padding: 20px;
+    order: 3;
   }
   .textContainer {
     margin-top: 30px !important;
@@ -62,6 +64,10 @@
     text-align: center !important;
   }
   .imgContainer {
-    width: 100%;
+    width: 90%;
+    display: block !important;
+    margin-left: auto;
+    margin-right: auto !important;
+    order: 1;
   }
 }
