--- a/component/Header/styles.module.css
+++ b/component/Header/styles.module.css
@@ -81,4 +81,9 @@
     border-bottom: 2px solid #999999;
     padding: 20px;
   }
+  .rightContainer {
+    margin-right: auto !important;
+    margin-left: 15px;
+    margin-top: 15px;
+  }
 }
