--- a/component/StartupJourney/styles.module.css
+++ b/component/StartupJourney/styles.module.css
@@ -43,6 +43,15 @@
   transform: scale(1.05);
   transition: transform 0.3s;
 }
+.subHeading {
+  margin-top: 50px;
+  text-align: center;
+  font-family: "Spline Sans", sans-serif;
+  font-size: 1.1rem;
+  color: #999999;
+  font-weight: 200;
+  text-transform: uppercase;
+}
 
 @media only screen and (max-width: 1000px) {
   .flexDiv {
