--- a/component/StartupJourney/styles.module.css
+++ b/component/StartupJourney/styles.module.css
@@ -65,8 +65,14 @@
     margin-left: auto;
     margin-right: auto;
   }
+
   .container h1 {
-    line-height: 3rem !important;
+    line-height: 4rem !important;
     font-size: 3rem !important;
+  }
+
+  .subHeading {
+    margin-top: 0px !important;
+    margin-bottom: 70px !important;
   }
 }
