--- a/component/AboutMe/styles.module.css
+++ b/component/AboutMe/styles.module.css
@@ -31,7 +31,7 @@
 }
 
 .imgContainer {
-  width: 25%;
+  width: 35%;
   padding: 40px;
   height: fit-content;
   border: 1px solid #999999;
@@ -73,11 +73,11 @@
     text-align: center !important;
   }
   .imgContainer {
-    width: 90%;
+    width: 80%;
     display: block !important;
-    margin-left: auto;
+    margin-left: auto !important;
     margin-right: auto !important;
     order: 1;
-    padding: 50px;
+    padding: 20px;
   }
 }
