--- a/component/StartupJourney/styles.module.css
+++ b/component/StartupJourney/styles.module.css
@@ -1,6 +1,6 @@
 .flexDiv {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 90%;
   margin-left: auto;
